@startuml CD-US1007

title Class Diagram - US1007

skinparam class {
    skinparam classAttributeIconSize 0
    skinparam packageStyle rectangle
    skinparam shadowing false
    skinparam linetype polyline
    BackgroundColor #FEF9E7
    ArrowColor Black
}

class "SetUpRecruitmentProcessUI" as UI {}

class "SetUpRecruitmentProcessController" as SetUpRecruitmentProcessController {
    +createApplicationPhase(initialDate: Date, finalDate: Date): Phase
    +createScreeningPhase(initialDate: Date, finalDate: Date): Phase
    +createInterviewPhase(initialDate: Date, finalDate: Date): Phase
    +createAnalysisPhase(initialDate: Date, finalDate: Date): Phase
    +createResultPhase(initialDate: Date, finalDate: Date): Phase
}

class "RecruitmentProcessService" as RecruitmentProcessService {
    +createApplicationPhase(initialDate: Date, finalDate: Date): Phase
    +createScreeningPhase(initialDate: Date, finalDate: Date): Phase
    +createInterviewPhase(initialDate: Date, finalDate: Date): Phase
    +createAnalysisPhase(initialDate: Date, finalDate: Date): Phase
    +createResultPhase(initialDate: Date, finalDate: Date): Phase
    +save(recruitmentProcess: RecruitmentProcess): RecruitmentProcess
}

class "RecruitmentProcessFactory" as RecruitmentProcessFactory {
    +createApplicationPhase(initialDate: Date, finalDate: Date): Phase
    +createScreeningPhase(initialDate: Date, finalDate: Date): Phase
    +createInterviewPhase(initialDate: Date, finalDate: Date): Phase
    +createAnalysisPhase(initialDate: Date, finalDate: Date): Phase
    +createResultPhase(initialDate: Date, finalDate: Date): Phase
    +createRecruitmentProcess(ApplicationPhase: Phase, ScreeningPhase: Phase, InterviewPhase: Phase, AnalysisPhase: Phase, ResultPhase: Phase): RecruitmentProcess
}

class "RecruitmentProcessRepository" as RecruitmentProcessRepository {
    +save(recruitmentProcess: RecruitmentProcess): RecruitmentProcess
}

class "JpaRecruitmentProcessRepository" as JpaRecruitmentProcessRepository {
    +save(recruitmentProcess: RecruitmentProcess): RecruitmentProcess
}

class "Database" as DB <<(D, #8BEBFF)>> {
}

UI --> SetUpRecruitmentProcessController
SetUpRecruitmentProcessController --> RecruitmentProcessService
RecruitmentProcessService --> RecruitmentProcessFactory
RecruitmentProcessService --> RecruitmentProcessRepository
RecruitmentProcessRepository --> JpaRecruitmentProcessRepository
JpaRecruitmentProcessRepository --> DB

@enduml